# cenozavr

./: .env_example  .gitignore  README.md  example_result.csv  pyproject.toml
cenozavr/: agents.py  extension.py  scrapper.py
