[tool.poetry]
name = "cenozavr"
version = "0.1.0"
description = ""
authors = ["deriabin_85 <deriabin_85@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
